# CanSig

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api.html  cansig-for-python-coders.html  contributing.html  environment.yml  formatting-data.html  genindex.html  index.html  interpretation.html  objects.inv  pipeline-advanced.html  preprocessing.html  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  troubleshooting.html
.ci/: check-requirements-cache.py
.github/workflows/: build.yml  ci.yml  docs-deploy.yml  docs-test.yml  docs.yml  test-pypi-deploy.yml
_sources/: cansig-for-python-coders.rst.txt  contributing.rst.txt  index.rst.txt  pipeline-advanced.rst.txt  preprocessing.rst.txt
_sources/source/: cansig.integration.data.rst.txt  cansig.integration.module.rst.txt  cansig.metasignatures.rst.txt  cansig.rst.txt  cansig.types.rst.txt
cansig/: __init__.py  filesys.py  gsea.py  logger.py  tutorial.py  types.py
cansig/_preprocessing/: _CONSTANTS.py  _adatas.py  _infercnv.py  _main.py  _malignant_annotation.py  _plotting.py  _quality_control.py  _scoring.py  _subclonal.py  _utils.py  annotation.py  data.py  infercnv.py  main.py  plotting.py  quality_control.py  scoring.py  subclonal.py  utils.py
cansig/cluster/: __init__.py  leiden.py
cansig/cnvanalysis/: __init__.py  differentialcnvs.py
cansig/integration/: _CONSTANTS.py  model.py
cansig/interface/: cluster.py
cansig/metaanalysis/: __init__.py  heatmap.py  plotting.py  repr_directory.py
cansig/models/: __init__.py  api.py  cansig.py  scvi.py
cansig/plotting/: __init__.py  plotting.py
cansig/run/: __init__.py  download.py  format.py  heatmap.py  integration.py  pipeline.py  postprocessing.py  summary.py
docs/: api.rst  cansig-for-python-coders.rst  conf.py  contributing.rst  formatting-data.rst  index.rst  interpretation.rst  pipeline-advanced.rst  preprocessing.rst  troubleshooting.rst
docs/source/: cansig.cluster.rst  cansig.cnvanalysis.rst  cansig.filesys.rst  cansig.integration.base.rst  cansig.models.rst  (+9 more)
source/: cansig.cluster.html  cansig.cnvanalysis.html  cansig.filesys.html  cansig.html  cansig.integration.base.html  cansig.integration.data.html  cansig.integration.html  cansig.integration.module.html  cansig.integration.training.html  cansig.interface.html  cansig.metaanalysis.html  cansig.metasignatures.html  cansig.models.html  cansig.plotting.html  cansig.run.html  cansig.types.html  modules.html
tests/: test_filesys.py  test_gsea.py
(+94 files in other folders)
