[metadata]
name = cansig
version = 0.1.1
platform = any
url = https://github.com/BoevaLab/CanSig
description = Discovering de novo shared transcriptional programs in single cancer cells
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages =
    cansig
    cansig._preprocessing
    cansig.cluster
    cansig.cnvanalysis
    cansig.interface
    cansig.metaanalysis
    cansig.models
    cansig.plotting
    cansig.run
python requires = >= 3.8
install_requires =
    anndata
    gseapy
    infercnvpy
    leidenalg
    matplotlib
    numpy<=1.21
    pandas    
    petname
    pydantic
    scanpy>=1.9.1
    seaborn
    scipy
    scvi-tools
    statsmodels
    protobuf~=3.19.0

[options.packages.find]
where=cansig

[options.extras_require]
test =
    pytest
    pytest-cov
    scikit-learn

[pytype]
inputs =
    cansig
    scripts
    tests
