[metadata]
name = cansig
version = 0.2.1
platform = any
url = https://github.com/BoevaLab/CanSig
description = Discovering de novo shared transcriptional programs in single cancer cells
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:
python requires = >= 3.8
install_requires =
    anndata
    gseapy
    infercnvpy
    leidenalg
    matplotlib
    numpy<=1.21
    pandas    
    petname
    pydantic
    scanpy>=1.9.1
    seaborn
    scipy
    scvi-tools
    statsmodels
    protobuf~=3.19.0

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    pytest-cov
    scikit-learn

[pytype]
inputs =
    cansig
    scripts
    tests
