[metadata]
name = cansig
version = 0.3.1
platform = any
url = https://github.com/BoevaLab/CanSig
description = Discovering de novo shared transcriptional programs in single cancer cells
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:
python requires = >= 3.8
install_requires =
    anndata
    gseapy
    infercnvpy
    leidenalg
    matplotlib
    numpy
    pandas    
    petname
    pydantic==4.5.0
    scanpy>=1.9.1
    seaborn
    scipy
    scvi-tools>=0.20.0
    statsmodels
    protobuf

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    pytest-cov
    scikit-learn

cansig-integration =
    cansig-integration @ https://github.com/BoevaLab/CanSig-integration.git@main

